# EventStore.Client.Api.Cpp

./: .gitignore  CMakeLists.txt  README.md
cmake/: msvc.cmake
examples/: append_to_stream.cpp  append_to_stream_batch.cpp  append_to_stream_cluster.cpp  catchup_all_subscription.cpp  catchup_subscription.cpp  connect-to-es-01.cpp  delete_stream.cpp  persistent_subscription.cpp  persistent_subscription_operations.cpp  read_all_events.cpp  read_stream_event.cpp  read_stream_events.cpp  reconnection.cpp  stream_metadata.cpp  transaction.cpp  volatile_subscription.cpp
include/: all_events_slice.hpp  append_to_stream.hpp  catchup_subscription_settings.hpp  cluster_settings.hpp  commit_transaction.hpp  conditional_append_to_stream.hpp  connection_result.hpp  connection_settings.hpp  create_persistent_subscription.hpp  delete_persistent_subscription.hpp  delete_stream.hpp  delete_stream_result.hpp  duration_conversions.hpp  event_data.hpp  event_read_result.hpp  expected_version.hpp  get_stream_metadata.hpp  guid.hpp  logger.hpp  node_endpoints.hpp  operations_manager.hpp  operations_map.hpp  persistent_subscription_settings.hpp  position.hpp  read_all_events.hpp  read_all_events_backward.hpp  read_all_events_forward.hpp  read_direction.hpp  read_stream_event.hpp  read_stream_events.hpp  read_stream_events_backward.hpp  read_stream_events_forward.hpp  recorded_event.hpp  resolved_event.hpp  set_stream_metadata.hpp  start_transaction.hpp  stream_events_slice.hpp  stream_metadata_result_raw.hpp  subscription_settings.hpp  transaction.hpp  (+4 more)
include/buffer/: basic_mutable_buffer_sequence.hpp  buffer_queue.hpp  dynamic_buffer.hpp
include/connection/: authentication_info.hpp  basic_tcp_connection.hpp  connection.hpp  connection_phase.hpp  connection_state.hpp  constants.hpp  heartbeat_info.hpp  identity_info.hpp  node_preference.hpp  reconnection_info.hpp  secure_tcp_connection.hpp
include/error/: error.hpp
include/message/: cluster_messages.hpp  messages.pb.h
include/subscription/: catchup_all_subscription.hpp  catchup_subscription.hpp  persistent_subscription.hpp  subscription_base.hpp  volatile_subscription.hpp
include/system/: consumer_strategies.hpp  event_types.hpp  metadata.hpp  streams.hpp
include/tcp/: authenticate.hpp  basic_discovery_service.hpp  cluster_discovery_service.hpp  connect.hpp  discovery_service.hpp  gossip_seed.hpp  handle_operation_error.hpp  heartbeat.hpp  identify.hpp  operation.hpp  read.hpp  tcp_commands.hpp  tcp_flags.hpp  tcp_package.hpp
include/user/: user_credentials.hpp
proto/: messages.proto
src/: messages.pb.cc
tests/: mock_async_read_stream.hpp  mock_tcp_connection.hpp
tests/buffer/: buffer_queue.cpp
tests/tcp/: operations_manager.cpp  operations_map.cpp  read.cpp  tcp_package.cpp
